--- a/popup.html
+++ b/popup.html
@@ -1,78 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <title>YouTube Max Quality Switcher Extension Settings</title>
-    <link rel="stylesheet" href="bootstrap_4.5.2_css_bootstrap.min.css">
-    <style>
-        body {
-            width: 300px;
-        }
-
-        /* Dark mode styling */
-        @media (prefers-color-scheme: dark) {
+    <head>
+        <title>YouTube Max Quality Switcher Extension Settings</title>
+        <link rel="stylesheet" href="bootstrap_4.5.2_css_bootstrap.min.css">
+        <style>
             body {
-                background-color: #343a40;
-                color: #fff;
+                width: 300px;
             }
 
-            .form-control {
-                background-color: #495057;
-                color: #fff;
-                border-color: #6c757d;
+            /* Dark mode styling */
+            @media (prefers-color-scheme: dark) {
+                body {
+                    background-color: #343a40;
+                    color: #fff;
+                }
+
+                .form-control {
+                    background-color: #495057;
+                    color: #fff;
+                    border-color: #6c757d;
+                }
+
+                .btn-success {
+                    background-color: #28a745;
+                    border-color: #28a745;
+                }
             }
 
-            .btn-success {
-                background-color: #28a745;
-                border-color: #28a745;
+            /* Extra small button */
+            .btn-xs {
+                padding: 0.25rem 0.5rem;
+                font-size: 0.7875rem;
+                line-height: 1.5;
+                border-radius: 0.2rem;
             }
-        }
 
-        /* Extra small button */
-        .btn-xs {
-            padding: 0.25rem 0.5rem;
-            font-size: 0.7875rem;
-            line-height: 1.5;
-            border-radius: 0.2rem;
-        }
+            #message {
+                margin-top: 15px;
+                display: none;
+            }
 
-        #message {
-            margin-top: 15px;
-            display: none;
-        }
+            #donate-qr {
+                display: none;
+                text-align: center;
+                margin-bottom: 15px;
+            }
 
-        #donate-qr {
-            display: none;
-            text-align: center;
-            margin-bottom: 15px;
-        }
-
-        .donate-button-container {
-            margin-bottom: 10px;
-        }
-    </style>
+            .donate-button-container {
+                margin-bottom: 10px;
+            }
+        </style>
     </head>
 
-<body class="p-3">
-    <div class="text-right donate-button-container">
-        <button id="donateBtn" class="btn btn-info btn-sm btn-xs">Donate Now</button>
-    </div>
-    <div id="donate-qr">
-        <img src="qr_code.png" alt="Paytm QR Code" width="200">
-    </div>
-    <p>This extension will continuously monitor YouTube video quality. If a user changes video quality,
-        the extension will reset it to the maximum quality after the below-mentioned interval.</p>
-    <div class="form-group d-flex justify-content-between align-items-center">
-        <label for="interval" class="mb-0">Check interval (in seconds):</label>
-        <input type="number" id="interval" min="1" class="form-control" style="width: 60%;">
-    </div>
-    <div class="text-center">
-        <button id="save" class="btn btn-success">Save</button>
-    </div>
-    <div id="message" class="alert alert-success mt-3" role="alert">
-        Settings saved!
-    </div>
-    <script src="popup.js"></script>
+    <body class="p-3">
+        <div class="text-right donate-button-container">
+            <button id="donateBtn" class="btn btn-info btn-sm btn-xs">Donate Now</button>
+        </div>
+        <div id="donate-qr">
+            <img src="qr_code.png" alt="Paytm QR Code" width="200">
+        </div>
+        <p><i>This extension will continuously monitor video links and as soon a new video is opened it will select
+                <span style="color: rgb(252, 252, 212);">"Maximum Available Quality"</span>.</br>
+                If user manually changes video quality later, the extension will wait for below configured seconds and then
+                kick-in to re-select <span style="color: rgb(252, 252, 212);">"Maximum Available Quality"</span> for same
+                video.</i></p>
+        <div class="form-group d-flex justify-content-between align-items-center">
+            <label for="interval" class="mb-0">Wait interval (in seconds):</label>
+            <input type="number" id="interval" min="1" class="form-control" style="width: 60%;">
+        </div>
+        <div class="text-center">
+            <button id="save" class="btn btn-success">Save</button>
+        </div>
+        <div id="message" class="alert alert-success mt-3" role="alert">
+            Settings saved!
+        </div>
+        <script src="popup.js"></script>
     </body>
 
 </html>
