Hotfix: Fixed paths in html

--- a/html/popup.html
+++ b/html/popup.html
@@ -3,8 +3,8 @@
 
     <head>
         <title>YouTube Max Quality Switcher Extension Settings</title>
-        <link rel="stylesheet" href="./styles/bootstrap_4.5.2_css_bootstrap.min.css">
-        <link rel="stylesheet" href="./styles/popup.css">
+        <link rel="stylesheet" href="../styles/bootstrap_4.5.2_css_bootstrap.min.css">
+        <link rel="stylesheet" href="../styles/popup.css">
     </head>
 
     <body class="p-3">
@@ -12,7 +12,7 @@
             <button id="donateBtn" class="btn btn-info btn-sm btn-xs">Donate Now</button>
         </div>
         <div id="donate-qr">
-            <img src="./media/qr_code.png" alt="Paytm QR Code" width="200">
+            <img src="../media/qr_code.png" alt="Paytm QR Code" width="200">
         </div>
         <p><i>This extension will continuously monitor video links and as soon a new video is opened it will select
                 <span style="color: rgb(252, 252, 212);">"Maximum Available Quality"</span>.</br>
@@ -31,7 +31,7 @@
         <div id="message" class="alert alert-success mt-3" role="alert">
             Settings saved!
         </div>
-        <script src="./scripts/popup.js"></script>
+        <script src="../scripts/popup.js"></script>
     </body>
 
 </html>
