Hotfix: Fixed jquery error in console and removed old artifacts

--- a/html/popup.html
+++ b/html/popup.html
@@ -31,6 +31,7 @@
         <div id="message" class="alert alert-success mt-3" role="alert">
             Settings saved!
         </div>
+        <script src="../scripts/jquery-3.6.0.min.js"></script>
         <script src="../scripts/popup.js"></script>
     </body>
 
