Style: New look new design

--- a/html/popup.html
+++ b/html/popup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>YouTube Max Quality Switcher Extension Settings</title>
+    <title>Auto Max Quality Pro Extension Settings</title>
     <link rel="stylesheet" href="../styles/bootstrap_4.5.2_css_bootstrap.min.css">
     <link rel="stylesheet" href="../styles/popup.css">
 </head>
