--- a/html/popup.html
+++ b/html/popup.html
@@ -25,7 +25,7 @@
     </button>
 </div>
 <div id="donate-qr">
-    <img src="../media/qr_code.png" alt="Paytm QR Code" width="200px">
+    <img src="../media/qr_code.jpg" alt="Paytm QR Code" width="200px">
 </div>
 <div class="hide-on-donate-click">
     <div class="form-group d-flex justify-content-between align-items-center quality-selection">
